--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<!-- Custom Browsers Color End -->
 
 	<link rel="stylesheet" href="css/main.min.css">
-	<script src="https://kit.fontawesome.com/049ba0a3d4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -472,84 +471,86 @@
 					<div class="package-el package-el3"><img src="img/package-el3.png" alt="package-el"></div>
 					<div class="package-el package-el4"><img src="img/package-el4.png" alt="package-el"></div>
 
-					<div class="package econom">
-						<div class="package-content">
-							<h3 class="package-title">Econom</h3>
-							<div class="package-subtitle">Офлайн-участие/онлайн</div>
-							<ul class="package-includes">
-								<li>Доступ в личный кабинет</li>
-								<li>Видеозаписи всех занятий</li>
-								<li>Чек-листы, все материалы обучения</li>
-								<li>Домашние задания</li>
-								<li>Q&A сессия (возможность получить ответы эксперта на все свои вопросы)</li>
-								<li>Возможность присутствия на занятиях в офисе AIR</li>
-								<li>Онлайн-трансляция занятий</li>
-								<li>Доступ в чат группы</li>
-								<li>Сопровождение координатора</li>
-								<li>Индивидуальная проверка домашнего задания экспертами</li>
-								<li>Оценка канала по итогам обучения (устно с экспертами)</li>
-								<li>Прохождение сертификации</li>
-								<li>Сертификат по итогам обучения</li>
-							</ul>
-							<hr>
-							<div class="package-status">Офлайн / Онлайн</div>
-							<div class="package-price"><span class="original">$579</span><span class="sale">$499</span></div>
-							<div class="package-enddate">до 31.01.2020</div>
-							<button class="air-enroll">Записаться на курс</button>
+					<div class="packages-inner owl-carousel">
+						<div class="package econom item">
+							<div class="package-content">
+								<h3 class="package-title">Econom</h3>
+								<div class="package-subtitle">Офлайн-участие/онлайн</div>
+								<ul class="package-includes">
+									<li>Доступ в личный кабинет</li>
+									<li>Видеозаписи всех занятий</li>
+									<li>Чек-листы, все материалы обучения</li>
+									<li>Домашние задания</li>
+									<li>Q&A сессия (возможность получить ответы эксперта на все свои вопросы)</li>
+									<li>Возможность присутствия на занятиях в офисе AIR</li>
+									<li>Онлайн-трансляция занятий</li>
+									<li>Доступ в чат группы</li>
+									<li>Сопровождение координатора</li>
+									<li>Индивидуальная проверка домашнего задания экспертами</li>
+									<li>Оценка канала по итогам обучения (устно с экспертами)</li>
+									<li>Прохождение сертификации</li>
+									<li>Сертификат по итогам обучения</li>
+								</ul>
+								<hr>
+								<div class="package-status">Офлайн / Онлайн</div>
+								<div class="package-price"><span class="original">$579</span><span class="sale">$499</span></div>
+								<div class="package-enddate">до 31.01.2020</div>
+								<button class="air-enroll">Записаться на курс</button>
+							</div>
 						</div>
-					</div>
-					<div class="package standard">
-						<div class="package-content">
-							<h3 class="package-title">Standard</h3>
-							<div class="package-subtitle">Офлайн-участие/онлайн</div>
-							<ul class="package-includes">
-								<li>Доступ в личный кабинет</li>
-								<li>Видеозаписи всех занятий</li>
-								<li>Чек-листы, все материалы обучения</li>
-								<li>Домашние задания</li>
-								<li>Q&A сессия (возможность получить ответы эксперта на все свои вопросы)</li>
-								<li>Возможность присутствия на занятиях в офисе AIR</li>
-								<li>Онлайн-трансляция занятий</li>
-								<li>Доступ в чат группы</li>
-								<li>Сопровождение координатора</li>
-								<li>Индивидуальная проверка домашнего задания экспертами</li>
-								<li>Оценка канала по итогам обучения (устно с экспертами)</li>
-								<li>Прохождение сертификации</li>
-								<li>Сертификат по итогам обучения</li>
-								<li>Развернутый аудит канала до и после обучения (объемный файл с подробным анализом, обзором ошибок и рекомендациями)</li>
-								<li>Воркшопы с координатором (20 мин до начала каждого занятия)</li>
-								<li>Анализ контент-стратегии, подготовленной участником во время обучения</li>
-								<li>Личная консультация специалиста AIR (1 час)</li>
-							</ul>
-							<hr>
-							<div class="package-status">Офлайн / Онлайн</div>
-							<div class="package-price"><span class="original">$999</span><span class="sale">$849</span></div>
-							<div class="package-enddate">до 31.01.2020</div>
-							<button class="air-enroll">Записаться на курс</button>
+						<div class="package standard item">
+							<div class="package-content">
+								<h3 class="package-title">Standard</h3>
+								<div class="package-subtitle">Офлайн-участие/онлайн</div>
+								<ul class="package-includes">
+									<li>Доступ в личный кабинет</li>
+									<li>Видеозаписи всех занятий</li>
+									<li>Чек-листы, все материалы обучения</li>
+									<li>Домашние задания</li>
+									<li>Q&A сессия (возможность получить ответы эксперта на все свои вопросы)</li>
+									<li>Возможность присутствия на занятиях в офисе AIR</li>
+									<li>Онлайн-трансляция занятий</li>
+									<li>Доступ в чат группы</li>
+									<li>Сопровождение координатора</li>
+									<li>Индивидуальная проверка домашнего задания экспертами</li>
+									<li>Оценка канала по итогам обучения (устно с экспертами)</li>
+									<li>Прохождение сертификации</li>
+									<li>Сертификат по итогам обучения</li>
+									<li>Развернутый аудит канала до и после обучения (объемный файл с подробным анализом, обзором ошибок и рекомендациями)</li>
+									<li>Воркшопы с координатором (20 мин до начала каждого занятия)</li>
+									<li>Анализ контент-стратегии, подготовленной участником во время обучения</li>
+									<li>Личная консультация специалиста AIR (1 час)</li>
+								</ul>
+								<hr>
+								<div class="package-status">Офлайн / Онлайн</div>
+								<div class="package-price"><span class="original">$999</span><span class="sale">$849</span></div>
+								<div class="package-enddate">до 31.01.2020</div>
+								<button class="air-enroll">Записаться на курс</button>
+							</div>
 						</div>
-					</div>
-					<div class="package corporate">
-						<div class="package-content">
-							<h3 class="package-title">Corporate</h3>
-							<ul class="package-includes">
-								<li>Программа, разработанная специально под потребности вашего бизнеса или бренда</li>
-								<li>Старт курса в удобную для вас дату</li>
-								<li>Обучение для целой команды до 15 человек</li>
-								<li>Работа над созданием стратегии выхода вашего бизнеса на YouTube</li>
-								<li>Погружение экспертов AIR в продукт</li>
-								<li>Конфиденциальность и строго индивидуальный подход</li>
-								<li>Разбор вопросов и болей, актуальных именно вам</li>
-								<li>Работа в течении курса над тем каналом, который важен вашему бизнесу</li>
-								<li>Анализ ниши и конкурентов, только релевантные кейсы и примеры</li>
-								<li>Помощь в создании контент-стратегии для вашего YouTube канала</li>
-								<li>Видеозаписи занятий и все материалы курса остаются у вас навсегда</li>
-								<li>Практические задания: как во время занятия, так и для самостоятельного выполнения</li>
-								<li>Открытые возможности для дальнейшего партнерства вашей компании с медиасетью AIR</li>
-							</ul>
-							<hr>
-							<div class="package-status">Офлайн</div>
-							<div class="package-price"><span class="original">$4 999</span></div>
-							<button class="air-enroll">Записаться на курс</button>
+						<div class="package corporate item">
+							<div class="package-content">
+								<h3 class="package-title">Corporate</h3>
+								<ul class="package-includes">
+									<li>Программа, разработанная специально под потребности вашего бизнеса или бренда</li>
+									<li>Старт курса в удобную для вас дату</li>
+									<li>Обучение для целой команды до 15 человек</li>
+									<li>Работа над созданием стратегии выхода вашего бизнеса на YouTube</li>
+									<li>Погружение экспертов AIR в продукт</li>
+									<li>Конфиденциальность и строго индивидуальный подход</li>
+									<li>Разбор вопросов и болей, актуальных именно вам</li>
+									<li>Работа в течении курса над тем каналом, который важен вашему бизнесу</li>
+									<li>Анализ ниши и конкурентов, только релевантные кейсы и примеры</li>
+									<li>Помощь в создании контент-стратегии для вашего YouTube канала</li>
+									<li>Видеозаписи занятий и все материалы курса остаются у вас навсегда</li>
+									<li>Практические задания: как во время занятия, так и для самостоятельного выполнения</li>
+									<li>Открытые возможности для дальнейшего партнерства вашей компании с медиасетью AIR</li>
+								</ul>
+								<hr>
+								<div class="package-status">Офлайн</div>
+								<div class="package-price"><span class="original">$4 999</span></div>
+								<button class="air-enroll">Записаться на курс</button>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -903,11 +904,11 @@
 									});
 
 							var iconBase =
-									'img/';
+									'http://md.ninesquares.biz/air-academy/img/';
 
 							var icons = {
 								info: {
-									icon: iconBase + 'map-marker.png'
+									icon: iconBase + 'map-marker-small.png'
 								}
 							};
 
