--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 	
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	<!-- Template Basic Images End -->
 	
 	<!-- Custom Browsers Color Start -->
@@ -731,7 +736,7 @@
 			</div>
 		</div>
 		<div id="air-feedbacks" class="air-section">
-			<h2><strong>Отзывы</strong></h2>
+			<h2>Наши <strong>кейсы</strong></h2>
 
 			<div class="feedbacks owl-carousel">
 				<div class="item">
@@ -739,14 +744,13 @@
 						<div class="fb-video">
 							<span class="fb-vimeo" style="display: none" data-link=""></span>
 							<span class="fb-youtube" style="display: none" data-link=""></span>
-							<div class="thumbnail"><img src="img/feedback.jpg" alt="feedback"></div>
-							<span class="play"><img src="img/play.png" alt="play"></span>
+							<div class="thumbnail"><img src="img/fb/fb1.png" alt="feedback"></div>
 						</div>
 						<div class="fb-author">
-							<div class="author-image"><img src="img/fb_author.png" alt="author"></div>
+							<div class="author-image"><img src="img/st1.png" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Василий Петров</div>
-								<div class="author-position">бренд менеджер Pepsi</div>
+								<div class="author-name">Franch TV</div>
+								<div class="author-position">бренд менеджер Franch TV</div>
 							</div>
 						</div>
 					</div>
@@ -756,14 +760,13 @@
 						<div class="fb-video">
 							<span class="fb-vimeo" style="display: none" data-link=""></span>
 							<span class="fb-youtube" style="display: none" data-link=""></span>
-							<div class="thumbnail"><img src="img/feedback.jpg" alt="feedback"></div>
-							<span class="play"><img src="img/play.png" alt="play"></span>
+							<div class="thumbnail"><img src="img/fb/fb2.png" alt="feedback"></div>
 						</div>
 						<div class="fb-author">
-							<div class="author-image"><img src="img/fb_author.png" alt="author"></div>
+							<div class="author-image"><img src="img/st2.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Василий Петров</div>
-								<div class="author-position">бренд менеджер Pepsi</div>
+								<div class="author-name">Citrus</div>
+								<div class="author-position">бренд менеджер Citrus</div>
 							</div>
 						</div>
 					</div>
@@ -773,14 +776,13 @@
 						<div class="fb-video">
 							<span class="fb-vimeo" style="display: none" data-link=""></span>
 							<span class="fb-youtube" style="display: none" data-link=""></span>
-							<div class="thumbnail"><img src="img/feedback.jpg" alt="feedback"></div>
-							<span class="play"><img src="img/play.png" alt="play"></span>
+							<div class="thumbnail"><img src="img/fb/fb3.png" alt="feedback"></div>
 						</div>
 						<div class="fb-author">
-							<div class="author-image"><img src="img/fb_author.png" alt="author"></div>
+							<div class="author-image"><img src="img/st3.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Василий Петров</div>
-								<div class="author-position">бренд менеджер Pepsi</div>
+								<div class="author-name">Avon cosmetics</div>
+								<div class="author-position">бренд менеджер Avon</div>
 							</div>
 						</div>
 					</div>
@@ -790,14 +792,77 @@
 						<div class="fb-video">
 							<span class="fb-vimeo" style="display: none" data-link=""></span>
 							<span class="fb-youtube" style="display: none" data-link=""></span>
-							<div class="thumbnail"><img src="img/feedback.jpg" alt="feedback"></div>
-							<span class="play"><img src="img/play.png" alt="play"></span>
+							<div class="thumbnail"><img src="img/fb/fb4.png" alt="feedback"></div>
 						</div>
 						<div class="fb-author">
-							<div class="author-image"><img src="img/fb_author.png" alt="author"></div>
+							<div class="author-image"><img src="img/st4.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Василий Петров</div>
-								<div class="author-position">бренд менеджер Pepsi</div>
+								<div class="author-name">M-cosmetics</div>
+								<div class="author-position">бренд менеджер M-cosmetics</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="feedback">
+						<div class="fb-video">
+							<span class="fb-vimeo" style="display: none" data-link=""></span>
+							<span class="fb-youtube" style="display: none" data-link=""></span>
+							<div class="thumbnail"><img src="img/fb/fb5.png" alt="feedback"></div>
+						</div>
+						<div class="fb-author">
+							<div class="author-image"><img src="img/st5.jpg" alt="author"></div>
+							<div class="author-info">
+								<div class="author-name">Violity</div>
+								<div class="author-position">бренд менеджер Violity</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="feedback">
+						<div class="fb-video">
+							<span class="fb-vimeo" style="display: none" data-link=""></span>
+							<span class="fb-youtube" style="display: none" data-link=""></span>
+							<div class="thumbnail"><img src="img/fb/fb6.png" alt="feedback"></div>
+						</div>
+						<div class="fb-author">
+							<div class="author-image"><img src="img/st6.jpg" alt="author"></div>
+							<div class="author-info">
+								<div class="author-name">Ярослав Самойлов</div>
+								<div class="author-position">бренд менеджер</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="feedback">
+						<div class="fb-video">
+							<span class="fb-vimeo" style="display: none" data-link=""></span>
+							<span class="fb-youtube" style="display: none" data-link=""></span>
+							<div class="thumbnail"><img src="img/fb/fb7.png" alt="feedback"></div>
+						</div>
+						<div class="fb-author">
+							<div class="author-image"><img src="img/st7.jpg" alt="author"></div>
+							<div class="author-info">
+								<div class="author-name">PIPL</div>
+								<div class="author-position">бренд менеджер PIPL</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="feedback">
+						<div class="fb-video">
+							<span class="fb-vimeo" style="display: none" data-link=""></span>
+							<span class="fb-youtube" style="display: none" data-link=""></span>
+							<div class="thumbnail"><img src="img/fb/fb8.png" alt="feedback"></div>
+						</div>
+						<div class="fb-author">
+							<div class="author-image"><img src="img/st8.jpg" alt="author"></div>
+							<div class="author-info">
+								<div class="author-name">Yacht Travel</div>
+								<div class="author-position">бренд менеджер YT</div>
 							</div>
 						</div>
 					</div>
@@ -808,32 +873,32 @@
 			<div class="container">
 				<div class="success-el success-el1"><img src="img/success-el.png" alt="success"></div>
 				<div class="success-el success-el2"><img src="img/success-el2.png" alt="success"></div>
-				<h2>Успешные <strong>кейсы</strong></h2>
+				<h2>Мы <strong>обучили</strong></h2>
 
 				<div class="cases">
 					<div class="case">
-						<img src="img/pepsi.png" alt="pepsi">
+						<img src="img/st1.png" alt="franch">
 					</div>
 					<div class="case">
-						<img src="img/suzuki.png" alt="suzuki">
+						<img src="img/st2.jpg" alt="citrus">
 					</div>
 					<div class="case">
-						<img src="img/canon.png" alt="canon">
+						<img src="img/st3.jpg" alt="avon">
 					</div>
 					<div class="case">
-						<img src="img/danone.png" alt="danone">
+						<img src="img/st4.jpg" alt="cosmetics">
 					</div>
 					<div class="case">
-						<img src="img/arsenal.png" alt="arsenal">
+						<img src="img/st5.jpg" alt="crown">
 					</div>
 					<div class="case">
-						<img src="img/mastercard.png" alt="mastercard">
+						<img src="img/st6.jpg" alt="man">
 					</div>
 					<div class="case">
-						<img src="img/agusha.png" alt="agusha">
+						<img src="img/st7.jpg" alt="pipl">
 					</div>
 					<div class="case">
-						<img src="img/panasonic.png" alt="panasonic">
+						<img src="img/st8.jpg" alt="yacht travel">
 					</div>
 				</div>
 			</div>
