feedbacks section update

--- a/index.html
+++ b/index.html
@@ -750,7 +750,10 @@
 							<div class="author-image"><img src="img/st1.png" alt="author"></div>
 							<div class="author-info">
 								<div class="author-name">Franch TV</div>
-								<div class="author-position">бренд менеджер Franch TV</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">36,3 тыс.</span> и <span class="views">3,1 млн.</span></p>
+									<p>На сегодня <span class="subscribers">98,4 тыс.</span> и <span class="views">8 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -765,8 +768,11 @@
 						<div class="fb-author">
 							<div class="author-image"><img src="img/st2.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Citrus</div>
-								<div class="author-position">бренд менеджер Citrus</div>
+								<div class="author-name">Цитрус</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">193,4 тыс.</span> и <span class="views">44,2 млн.</span></p>
+									<p>На сегодня <span class="subscribers">505 тыс.</span> и <span class="views">110,2 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -781,8 +787,11 @@
 						<div class="fb-author">
 							<div class="author-image"><img src="img/st3.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Avon cosmetics</div>
-								<div class="author-position">бренд менеджер Avon</div>
+								<div class="author-name">Avon</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">40,5 тыс.</span> и <span class="views">53,7 млн.</span></p>
+									<p>На сегодня <span class="subscribers">51 тыс.</span> и <span class="views">61,6 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -798,7 +807,10 @@
 							<div class="author-image"><img src="img/st4.jpg" alt="author"></div>
 							<div class="author-info">
 								<div class="author-name">M-cosmetics</div>
-								<div class="author-position">бренд менеджер M-cosmetics</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">1,2 тыс.</span> и <span class="views">76,8 тыс.</span></p>
+									<p>На сегодня <span class="subscribers">70,9 тыс.</span> и <span class="views">7,75 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -814,7 +826,10 @@
 							<div class="author-image"><img src="img/st5.jpg" alt="author"></div>
 							<div class="author-info">
 								<div class="author-name">Violity</div>
-								<div class="author-position">бренд менеджер Violity</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">9,8 тыс.</span></p>
+									<p>На сегодня <span class="subscribers">26,6 тыс.</span> и <span class="views">18,3 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -829,8 +844,11 @@
 						<div class="fb-author">
 							<div class="author-image"><img src="img/st6.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">Ярослав Самойлов</div>
-								<div class="author-position">бренд менеджер</div>
+								<div class="author-name">Ярослав Самойлов - Фаза Роста</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">6,5 тыс.</span> и <span class="views">456,1 тыс.</span></p>
+									<p>На сегодня <span class="subscribers">830 тыс.</span> и <span class="views">67,3 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -845,8 +863,11 @@
 						<div class="fb-author">
 							<div class="author-image"><img src="img/st7.jpg" alt="author"></div>
 							<div class="author-info">
-								<div class="author-name">PIPL</div>
-								<div class="author-position">бренд менеджер PIPL</div>
+								<div class="author-name">Pipl.ua</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">3,7 тыс.</span> и <span class="views">81 тыс.</span></p>
+									<p>На сегодня <span class="subscribers">13,8 тыс.</span> и <span class="views">2,1 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -862,7 +883,10 @@
 							<div class="author-image"><img src="img/st8.jpg" alt="author"></div>
 							<div class="author-info">
 								<div class="author-name">Yacht Travel</div>
-								<div class="author-position">бренд менеджер YT</div>
+								<div class="author-position">
+									<p>До курса <span class="subscribers">7,3 тыс.</span> и <span class="views">225,9 тыс.</span></p>
+									<p>На сегодня <span class="subscribers">20,1 тыс.</span> и <span class="views">4,5 млн.</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
